when dealer on table you cant touch